--- a/kurs/2011-08-11-damian-conway-pbp-modern-perl.html
+++ b/kurs/2011-08-11-damian-conway-pbp-modern-perl.html
@@ -24,7 +24,7 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
  <dd>Redpill-Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
 
  <dt>Tid:</dt>
- <dd><strong>Torsdag 11. august</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-intro-to-modern-perls/">Introduction to Modern Perls</a>.</dd>
+ <dd><strong>Torsdag 11. august</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-introduction-modern-perls-510-512-an/">Introduction to Modern Perls (5.10, 5.12 and 5.14)</a>.</dd>
  <dd><strong>Fredag 12. august</strong>: 09:00-16:30, <a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-perl-best-practice/">Perl Best Practice</a>.</dd>
 </dl>
 
