Increased max number of participants from 12 to 24
svn path=/trunk/oslo.pm.org/htdocs/; revision=139

--- a/kurs/2011-08-11-damian-conway-pbp-modern-perl.html
+++ b/kurs/2011-08-11-damian-conway-pbp-modern-perl.html
@@ -67,7 +67,7 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
 
 <p>Kursene koster EUR 550 pr. person per dag, og overskuddet vil i hovedsak g&aring; til videre finansiering av Damian Conway sitt arbeide for Perl og CPAN-milj&oslash;ene, og delvis til Oslo Perl Mongers for oppbygging av fagmiljøet for Perl-programerere i Oslo-regionen.</p>
 
-<p>Kursene har maks 12 deltagere.</p>
+<p>Kursene har maks <strike>12</strike> 24 deltagere.</p>
 
 <h2>P&aring;melding</h2>
 
