--- a/styre/styre-2011-06-01.html
+++ b/styre/styre-2011-06-01.html
@@ -13,6 +13,7 @@
 <ul>
  <li>Martin Tostrup Setek (<a href="http://www.usit.uio.no/">USIT</a>)</li>
  <li>Marcus Ramberg (<a href="http://nordaaker.com/">Nordaaker Ltd</a>)</li>
+ <li>Karl Rune Nilsen (<a href="http://redpill-linpro.com/">Redpill Linpro</a>)</li>
 
 </ul>
 
