Update to announcements, put hackathon on the front page
svn path=/trunk/oslo.pm.org/htdocs/; revision=151

--- a/arrangementer/2012-04-20-perl6patterns-hackathon.html
+++ b/arrangementer/2012-04-20-perl6patterns-hackathon.html
@@ -3,9 +3,9 @@
 <p>Vi har invitert kjernemedlemmer i Perl 6 milj&oslash;et til Oslo!</p>
 
 <p>Arrangementet er f&oslash;rst og fremst for spesielt interesserte,
-men hvis du bryr deg om <em>Perl 6</em>, <em>Rakudo</em>,
-hvordan selv l&aelig;re og l&aelig;re bort spr&aring;ket, eller andre
-relaterte tema, s&aring; er du hjertelig velkommen til &aring; bidra!</p>
+men hvis du bryr deg om <em>Perl 6</em>, <em>Rakudo</em>, <em>Niecza</em>,
+hvordan l&aelig;re og l&aelig;re bort spr&aring;ket (eller andre
+relaterte tema), s&aring; er du hjertelig velkommen til &aring; bidra!</p>
 
 <p>Detaljer rundt arrangemetet finnes p&aring; f&oslash;lgende
 <a href="https://gist.github.com/1711730">gist</a> side p&aring; github.
