--- a/arrangementer/2012-04-20-perl6patterns-hackathon.html
+++ b/arrangementer/2012-04-20-perl6patterns-hackathon.html
@@ -10,7 +10,7 @@ relaterte tema), s&aring; er du hjertelig velkommen til &aring; bidra!</p>
 <p>Detaljer rundt arrangemetet finnes p&aring; f&oslash;lgende
 <a href="https://gist.github.com/1711730">gist</a> side p&aring; github.
 Men om du ikke vil kaste deg over denne, er de viktigste stikkordene
-<em>Perl 6</em>, <em>Programmerings pedagogikk</em>, <em>20. til 22. april
+<em>Perl 6</em>, <em>Programmerings-pedagogikk</em>, <em>20. til 22. april
 2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. For &aring; melde
 deg p&aring;, send en mail til aktive-lista v&aring;r!.</p>
 
