--- a/kurs/2012-04-18-damian-conway-testing-productive-api.html
+++ b/kurs/2012-04-18-damian-conway-testing-productive-api.html
@@ -1,13 +1,13 @@
-<h1>To 1-dagers kurs om <em>Modern Perl</em> og <em>Perl Best Practices</em></h1>
+<h1>Tre &eacute;n-dagers kurs om <em>Test-Driven Development in Perl</em>, <em>API Design for Perl</em> og <em>The Productive Programmer</em></h1>
 
 <p>18., 19. og 20. april 2012, i Redpill Linpro sine lokaler p&aring; Storo i
 Oslo. Kursene avholdes p&aring; engelsk.</p>
 
 <p>Oslo.pm og Redpill Linpro arrangerer kurs i <a href="http://damian.conway.org/Courses/IntroTDD.html">Test-Driven Development in Perl</a>, <a href="http://damian.conway.org/Courses/DesignAPI.html">API Design for Perl</a> og <a href="http://damian.conway.org/Courses/Productivity.html">The Productive Programmer</a>. Vi henter inn <a href="http://damian.conway.org/About_us/Bio_formal.html">Damian Conway</a> fra Thoughtstream for å holde kursene!</p>
 
-<p>Styret i Oslo.pm har tenkt på hvordan få interessante foredragsholdere til Oslo, og hvordan gjøre kurstilbudet mer spennende for oss som jobber mye med Perl. Vi skaffer oppadgående og kjente bidragsytere i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet skal få en liten "takk" i form av kursavgiften.</p>
+<p>Styret i Oslo.pm ønsker å få interessante foredragsholdere til Oslo, og med dette gjøre kurstilbudet mer spennende for oss som jobber mye med Perl. Vi skaffer oppadgående og kjente bidragsytere i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet skal få en liten "takk" i form av kursavgiften.</p>
 
-<p>P&aring; samme m&aring;te som i fjor vil deler av kursavgiften g&aring; til Oslo Perl Mongers! På denne måten får vi ressurser for å skape et bedre fagmiljø for alle i Oslo.</p>
+<p>Også i år vil deler av kursavgiften g&aring; til Oslo Perl Mongers! På denne måten får vi ressurser for å skape et bedre fagmiljø for alle i Oslo.</p>
 
 <h1>M&aring;lgruppe</h1>
 
