--- a/kurs/2012-04-18-damian-conway-testing-productive-api.html
+++ b/kurs/2012-04-18-damian-conway-testing-productive-api.html
@@ -1,4 +1,4 @@
-<h1>Tre &eacute;n-dagers kurs om <em>Test-Driven Development in Perl</em>, <em>API Design for Perl</em> og <em>The Productive Programmer</em></h1>
+<h1>Tre &eacute;n-dagers kurs om <em>test-drevet utvikling</em>, <em>API design</em> og <em>produktivitet</em></h1>
 
 <p>18., 19. og 20. april 2012, i Redpill Linpro sine lokaler p&aring; Storo i
 Oslo. Kursene avholdes p&aring; engelsk.</p>
