--- a/kurs/2012-04-18-damian-conway-testing-productive-api.html
+++ b/kurs/2012-04-18-damian-conway-testing-productive-api.html
@@ -5,9 +5,9 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
 
 <p>Oslo.pm og Redpill Linpro arrangerer kurs i <a href="http://damian.conway.org/Courses/IntroTDD.html">Test-Driven Development in Perl</a>, <a href="http://damian.conway.org/Courses/DesignAPI.html">API Design for Perl</a> og <a href="http://damian.conway.org/Courses/Productivity.html">The Productive Programmer</a>. Vi henter inn <a href="http://damian.conway.org/About_us/Bio_formal.html">Damian Conway</a> fra Thoughtstream for å holde kursene!</p>
 
-<p>Styret i Oslo.pm ønsker å få interessante foredragsholdere til Oslo, og med dette gjøre kurstilbudet mer spennende for oss som jobber mye med Perl. Vi skaffer oppadgående og kjente bidragsytere i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet skal få en liten "takk" i form av kursavgiften.</p>
+<p>Oslo.pm ønsker å få interessante foredragsholdere til Oslo, og med dette gjøre kurstilbudet mer spennende for oss som jobber mye med Perl. Vi skaffer oppadgående og kjente bidragsytere i CPAN og Perl-miljøet, og ber dem å holde kurs for oss - både for at vi kan lære av de beste, og for at folk som bidrar aktivt i miljøet skal få en liten "takk" i form av kursavgiften.</p>
 
-<p>Også i år vil deler av kursavgiften g&aring; til Oslo Perl Mongers! På denne måten får vi ressurser for å skape et bedre fagmiljø for alle i Oslo.</p>
+<p>Også i år vil deler av kursavgiften g&aring; til Oslo.pm! På denne måten får vi ressurser for å skape et bedre fagmiljø for alle i Oslo.</p>
 
 <h1>M&aring;lgruppe</h1>
 
