--- a/kurs/2012-04-18-damian-conway-testing-productive-api.html
+++ b/kurs/2012-04-18-damian-conway-testing-productive-api.html
@@ -21,7 +21,7 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
 <h1>Tid/Sted</h1>
 <dl>
  <dt>Sted:</dt>
- <dd>Redpill-Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
+ <dd>Redpill Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
 
  <dt>Tid:</dt>
  <dd><strong>Onsdag 18. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/IntroTDD.html">Test-Driven Development in Perl</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-test-driven-development-in-perl/">P&aring;melding</a>).</dd>
