Fix Norwenglish text
svn path=/trunk/oslo.pm.org/htdocs/; revision=168

--- a/kontakt/kontakt-2012-03-19.html
+++ b/kontakt/kontakt-2012-03-19.html
@@ -17,4 +17,4 @@ Dun &amp; Bradstreet D-U-N-S&reg;: <a href="https://smallbusiness.dnb.com/ePlatf
 
 <h2>Email</h2>
 
-<pre>Board: oslo.pm-styret (a) foo.no</pre>
+<pre>Styre: oslo.pm-styret (a) foo.no</pre>
