--- a/arrangementer/2012-04-20-perl6patterns-hackathon.html
+++ b/arrangementer/2012-04-20-perl6patterns-hackathon.html
@@ -7,12 +7,11 @@ men hvis du bryr deg om <em>Perl 6</em>, <em>Rakudo</em>, <em>Niecza</em>,
 hvordan l&aelig;re og l&aelig;re bort spr&aring;ket (eller andre
 relaterte tema), s&aring; er du hjertelig velkommen til &aring; bidra!</p>
 
-<p>Detaljer rundt arrangemetet finnes p&aring; f&oslash;lgende
-<a href="https://gist.github.com/1711730">gist</a> side p&aring; github.
+<p>Detaljer rundt arrangementet finnes p&aring; v&aring;r 
+<a href="https://gist.github.com/1711730">status side</a> p&aring; github.
 Men om du ikke vil kaste deg over denne, er de viktigste stikkordene
 <em>Perl 6</em>, <em>Programmerings-pedagogikk</em>, <em>20. til 22. april
-2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. For &aring; melde
-deg p&aring;, send en mail til aktive-lista v&aring;r!</p>
+2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. <a href="">Meld deg p&aring; her</a>!</p>
 
 <ul>
   <li><a href="https://gist.github.com/1711730">Oversikt over arrangementet, og invitasjon</a></li>
