Fix bad wording in invitation
svn path=/trunk/oslo.pm.org/htdocs/; revision=173

--- a/arrangementer/2012-04-19-damian-conway-quaquaversal.html
+++ b/arrangementer/2012-04-19-damian-conway-quaquaversal.html
@@ -7,4 +7,4 @@
   <dt>Tid:</dt><dd>Torsdag 19. April 2012, kl. 18:00</dd>
 </dl>
 
-<p>Inngang er gratis og &aring;pen for alle!</p>
+<p>Inngang er gratis og arrangementet er &aring;pent for alle!</p>
