Increase capacity from 12 to 24
svn path=/trunk/oslo.pm.org/htdocs/; revision=174

--- a/kurs/2012-04-18-damian-conway-testing-productive-api.html
+++ b/kurs/2012-04-18-damian-conway-testing-productive-api.html
@@ -24,9 +24,9 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
  <dd>Redpill Linpro sitt lokale p&aring; Storo, <a href="http://redpill-linpro.no/Om-oss/Her-finner-du-oss">Vitaminveien 1A</a>, Oslo.</dd>
 
  <dt>Tid:</dt>
- <dd><strong>Onsdag 18. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/IntroTDD.html">Test-Driven Development in Perl</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-test-driven-development-in-perl/">P&aring;melding</a>).</dd>
- <dd><strong>Torsdag 19. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/Productivity.html">The Productive Programmer</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-the-productive-programmer/">P&aring;melding</a>).</dd>
- <dd><strong>Fredag 20. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/DesignAPI.html">API Design for Perl</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-api-design-for-perl/">P&aring;melding</a>).</dd>
+ <dd><strong>Onsdag 18. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/IntroTDD.html">Test-Driven Development in Perl</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-test-driven-development-in-perl/">P&aring;melding</a>, maks <strike>12</strike> 24 plasser).</dd>
+ <dd><strong>Torsdag 19. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/Productivity.html">The Productive Programmer</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-the-productive-programmer/">P&aring;melding</a>, maks <strike>12</strike> 24 plasser).</dd>
+ <dd><strong>Fredag 20. april</strong>: 09:00-16:30, <a href="http://damian.conway.org/Courses/DesignAPI.html">API Design for Perl</a> (<a href="https://training.redpill-linpro.com/category/perl/course/damian-conway-api-design-for-perl/">P&aring;melding</a>, maks <strike>12</strike> 24 plasser).</dd>
 </dl>
 
 <h1>Forkunnskaper</h1>
@@ -73,7 +73,7 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
 
 <p>Kursene koster EUR 550 pr. person per dag, og overskuddet vil i hovedsak g&aring; til videre finansiering av Damian Conway sitt arbeide for Perl og CPAN-milj&oslash;ene, og delvis til Oslo Perl Mongers for oppbygging av fagmiljøet for Perl-programerere i Oslo-regionen.</p>
 
-<p>Kursene har maks 12 <!-- 24 --> deltagere.</p>
+<p>Kursene har maks <strike>12</strike> 24 deltagere.</p>
 
 <h2>P&aring;melding</h2>
 
