--- a/arrangementer/2012-04-20-perl6patterns-hackathon.html
+++ b/arrangementer/2012-04-20-perl6patterns-hackathon.html
@@ -11,7 +11,7 @@ relaterte tema), s&aring; er du hjertelig velkommen til &aring; bidra!</p>
 <a href="https://gist.github.com/1711730">status side</a> p&aring; github.
 Men om du ikke vil kaste deg over denne, er de viktigste stikkordene
 <em>Perl 6</em>, <em>Programmerings-pedagogikk</em>, <em>20. til 22. april
-2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. <a href="">Meld deg p&aring; her</a>!</p>
+2012</em>, <em>Hacking</em> og <em>Sosialiteter</em>. <a href="https://docs.google.com/spreadsheet/viewform?formkey=dGhHazhleEhpdFJYNEdGc3ZoV0ZodFE6MQ#gid=5">Meld deg p&aring; her</a>!</p>
 
 <ul>
   <li><a href="https://gist.github.com/1711730">Oversikt over arrangementet, og invitasjon</a></li>
