--- a/kurs/2012-04-18-damian-conway-testing-productive-api.html
+++ b/kurs/2012-04-18-damian-conway-testing-productive-api.html
@@ -77,7 +77,7 @@ Oslo. Kursene avholdes p&aring; engelsk.</p>
 
 <h2>P&aring;melding</h2>
 
-<p>P&aring;melding skjer via <a href="https://training.redpill-linpro.com/category/perl/">Redpill Linpro sin kursside</a>.</p>
+<p>P&aring;melding skjer via <a href="https://training.redpill-linpro.com/category/perl/">Redpill Linpro sin kursside</a>. <strong>P&aring;meldingsfrist: Mandag 16. April, 14:00<strong>.</p>
 
 <p><strong>For at en kursmodul skal avholdes</strong> må det være <em>4 (fire) eller fler</em> påmeldte deltagere to uker før kurset. Sjekk kalenderen!</p>
 
