Rune is at Telenor now
svn path=/trunk/oslo.pm.org/htdocs/; revision=180

--- a/styre/styre-2012-02-01.html
+++ b/styre/styre-2012-02-01.html
@@ -12,7 +12,7 @@
 <h3>Styremedlemmer</h3>
 <ul>
  <li>Arne Sommer (<a href="http://tieto.no/">Tieto</a>)</li>
- <li>Karl Rune Nilsen (<a href="http://redpill-linpro.com/">Redpill Linpro</a>)</li>
+ <li>Karl Rune Nilsen (<a href="http://telenor.no/">Telenor</a>)</li>
  <li>Marcus Ramberg (<a href="http://nordaaker.no/">Nordaaker AS</a>)</li>
  <li>Martin Tostrup Setek (<a href="http://www.usit.uio.no/">USIT</a>)</li>
 </ul>
