--- a/kontakt/kontakt-2012-03-19.html
+++ b/kontakt/kontakt-2012-03-19.html
@@ -1,4 +1,4 @@
-<h2>Kontakt-info</h2>
+<h2>Contact-information</h2>
 
 <pre>Oslo Perl Mongers (Oslo.pm)
 c/o Salve J. Nilsen
@@ -6,14 +6,16 @@ Grefsenveien 43
 0485 Oslo
 Norway</pre>
 
-<h2>Org. nr.</h2>
+<h2>Organization registries</h2>
 
 <pre>Brønnøysund: <a href="http://w2.brreg.no/enhet/sok/detalj.jsp?orgnr=990525277">NO 990 525 277</a>
 Dun &amp; Bradstreet D-U-N-S&reg;: <a href="https://smallbusiness.dnb.com/ePlatform/servlet/IballValidationCmd?storeId=10001&searchPerform=true&catalogId=70001&productId=0&lookupType=AdvancedCompanySearch&searchType=DSF&skipIPValidation=YES&dunsNumber=566692245&dunsCountry=NO">566692245</a></pre>
 
-<h2>Bank</h2>
+<h2>Bank account</h2>
 
-<pre>Nordea: 6094.05.68261</pre>
+<pre> Acct. (Nordea):    6094.05.68261
+Acct. (IBAN):    NO0260940568261
+Acct. (Swift):    NDEANOKK</pre>
 
 <h2>Email</h2>
 
