--- a/kontakt/kontakt-2012-03-19.html
+++ b/kontakt/kontakt-2012-03-19.html
@@ -8,8 +8,8 @@ Norway</pre>
 
 <h2>Organization registries</h2>
 
-<pre>Brønnøysund:                   <a href="http://w2.brreg.no/enhet/sok/detalj.jsp?orgnr=990525277">NO 990 525 277</a>
-Dun &amp; Bradstreet D-U-N-S&reg;: <a href="https://smallbusiness.dnb.com/ePlatform/servlet/IballValidationCmd?storeId=10001&searchPerform=true&catalogId=70001&productId=0&lookupType=AdvancedCompanySearch&searchType=DSF&skipIPValidation=YES&dunsNumber=566692245&dunsCountry=NO">566692245</a></pre>
+<pre>The Brønnøysund Register Centre: <a href="http://w2.brreg.no/enhet/sok/detalj.jsp?orgnr=990525277">NO 990 525 277</a>
+Dun &amp; Bradstreet D-U-N-S&reg;:       <a href="https://smallbusiness.dnb.com/ePlatform/servlet/IballValidationCmd?storeId=10001&searchPerform=true&catalogId=70001&productId=0&lookupType=AdvancedCompanySearch&searchType=DSF&skipIPValidation=YES&dunsNumber=566692245&dunsCountry=NO">566692245</a></pre>
 
 <h2>Bank account</h2>
 
