Swift -> SWIFT (BIC)
svn path=/trunk/oslo.pm.org/htdocs/; revision=184

--- a/kontakt/kontakt-2012-03-19.html
+++ b/kontakt/kontakt-2012-03-19.html
@@ -13,9 +13,9 @@ Dun &amp; Bradstreet D-U-N-S&reg;:       <a href="https://smallbusiness.dnb.com/
 
 <h2>Bank account</h2>
 
-<pre>Acct. (Nordea):    6094.05.68261
-Acct. (IBAN):      NO0260940568261
-Acct. (Swift):     NDEANOKK</pre>
+<pre>Nordea:      6094.05.68261
+IBAN:        NO0260940568261
+SWIFT (BIC): NDEANOKK</pre>
 
 <h2>Email</h2>
 
